--- a/css/style.css
+++ b/css/style.css
@@ -284,3 +284,25 @@ button {
   margin-bottom: var(--mb-1-5);
   line-height: var(--text-line-height);
 }
+.buy__container {
+  position: relative;
+  background-color: var(--container-color);
+  padding: 2rem 1.5rem;
+  border-radius: 0.75rem;
+}
+
+.buy__title {
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-75);
+}
+
+.buy__description {
+  margin-bottom: var(--mb-1);
+}
+
+.buy__img {
+  width: 300px;
+  position: absolute;
+  top: 4rem;
+  right: -11rem;
+}
